<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/actionBarItemBackground"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_arrow_back_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/app_add_kkn_data"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="28dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_mahasiswa_nim"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorIconDrawable="@null">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_mahasiswa_nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_kkn_nim_hint"
                    android:inputType="phone"
                    android:textColorHint="@color/colorGreyLight"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_mahasiswa_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:errorIconDrawable="@null">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_mahasiswa_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_kkn_student_name_hint"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorGreyLight" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_mahasiswa_stambuk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:errorIconDrawable="@null">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_mahasiswa_stambuk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_kkn_stambuk_hint"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorGreyLight" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_mahasiswa_major"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:errorIconDrawable="@null">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_mahasiswa_major"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_kkn_major"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorGreyLight" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_mahasiswa_faculty"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_weight="1"
                app:errorIconDrawable="@null">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_mahasiswa_faculty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_kkn_faculty"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorGreyLight" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_mahasiswa_university"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_weight="1"
                app:errorIconDrawable="@null">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_mahasiswa_university"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_kkn_university"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorGreyLight" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_mahasiswa_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:errorIconDrawable="@null">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_mahasiswa_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_kkn_location"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorGreyLight" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_mahasiswa_program"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:errorIconDrawable="@null">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_mahasiswa_program"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_kkn_program"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorGreyLight" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_red_round_10dp"
                android:text="@string/app_data_delete"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_green_round_10dp"
                android:paddingHorizontal="18dp"
                android:paddingVertical="8dp"
                android:text="@string/app_data_save"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:ignore="RelativeOverlap" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>